--- a/pages/register.html
+++ b/pages/register.html
@@ -50,7 +50,7 @@
                     </div>
                 </div>
                 <button id="submitButton" type="submit">CRIAR CONTA</button>
-                <div id="register">
+                <div id="login">
                     <p>Já tem uma conta?</p>
                     <a href="../pages/login.html">
                         <span>Entrar</span>
