--- a/index.html
+++ b/index.html
@@ -16,50 +16,62 @@
 </head>
 
 <body>
-    <div class="wrapper">
-        <div class="topmessage">
-            <span>Copyright © 2000-2021 | Roots ®</span>
-        </div>
-        <header>
-            <div class="logo-menu">
-                <img id="logo" src="images/roots_logo_1.png" alt="">
-                <div id="menu">
-                    <a href="index.html">Home</a>
-                    <a href="pages/products.html">Produtos</a>
-                    <a href="">Sobre nós</a>
+    <div class="container">
+
+        <div class="header-welcome">
+            <div>
+                <div class="topmessage">
+                    <span>Copyright © 2000-2021 | Roots ®</span>
                 </div>
-            </div>
-            <div class="search-cart-login">
-                <div id="search">
-                    <input type="search" name="search" id="" placeholder="Buscar um produto">
-                    <embed src="images/search.svg" type="">
-                </div>
-                <a href="pages/cart.html" id="cart">
-                    <embed src="images/shopping_cart.svg" type="">
-                    <div id="cart-count">
-                        <embed src="images/circle_cart.svg" type="">
-                        <span>1</span>
+                <header>
+                    <div id="logo">
+                        <img src="images/roots_logo_1.png" alt="">
                     </div>
-                </a>
-                <div id="login">
-                    <a href="pages/login.html">Entrar</a>
-                    <embed src="images/user_icon.svg" type="">
+                    <div id="menu">
+                        <a href="pages/products.html">Produtos</a>
+                        <a href="">Sobre nós</a>
+                    </div>
+                    <div id="search-cart">
+                        <div id="search">
+                            <input type="search" name="search" id="" placeholder="Buscar um produto">
+                            <img src="images/search.svg" type="">
+                        </div>
+                        <a id="cart" href="pages/cart.html">
+                            <img src="images/shopping_cart.svg" type="">
+                        </a>
+                        <div id="cart-count">
+                            <embed src="images/circle_cart.svg" type="">
+                            <span>1</span>
+                        </div>
+                    </div>
+                    <div id="login">
+                        <a href="pages/login.html">Entrar</a>
+                        <img src="images/user_icon.svg" type="">
+                    </div>
+                </header>
+            </div>
+            <div class="welcome">
+                <div>
+                    <img src="images/welcome.jpg" alt="">
+                </div>
+                <div>
+                    <img src="images/waves_welcome.svg" type="">
+                </div>
+                <div id="caption">
+                    <h1>Comer saudável nunca foi tão fácil.</h1>
+                    <a href="pages/register.html">
+                        <span>Cadastre-se</span>
+                    </a>
                 </div>
             </div>
-        </header>
-        <div class="welcome">
-            <img src="images/welcome.jpg" alt="">
-            <embed src="images/waves_welcome.svg" type="">
-            <h1>Comer saudável nunca foi tão fácil.</h1>
-            <a href="pages/register.html">
-                <span>Cadastre-se</span>
-            </a>
         </div>
         <div class="popular">
             <h1>Populares</h1>
             <div>
                 <div id="product-card">
-                    <img src="images/products/salmon_salad.jpg" alt="">
+                    <div>
+                        <img src="images/products/salmon_salad.jpg" alt="">
+                    </div>
                     <div>
                         <span>SALADAS</span>
                         <p>Salada c/ salmão</p>
@@ -71,11 +83,13 @@
                 </div>
 
                 <div id="product-card">
-                    <img src="images/products/salmon_salad.jpg" alt="">
+                    <div>
+                        <img src="images/products/mixed_salad.png" alt="">
+                    </div>
                     <div>
                         <span>SALADAS</span>
-                        <p>Salada c/ salmão</p>
-                        <span>R$ 23.90</span>
+                        <p>Salada mista</p>
+                        <span>R$ 20.90</span>
                     </div>
                     <a href="">
                         <span>+</span>
@@ -83,11 +97,13 @@
                 </div>
 
                 <div id="product-card">
-                    <img src="images/products/salmon_salad.jpg" alt="">
+                    <div>
+                        <img src="images/products/cesar_salad.png" alt="">
+                    </div>
                     <div>
                         <span>SALADAS</span>
-                        <p>Salada c/ salmão</p>
-                        <span>R$ 23.90</span>
+                        <p>Salada Cesar</p>
+                        <span>R$ 15.90</span>
                     </div>
                     <a href="">
                         <span>+</span>
@@ -206,16 +222,16 @@
             <div>
                 <div id="social-media">
                     <a href="https://www.google.com.br">
-                        <embed src="images/facebook.svg" type="">
+                        <img src="images/facebook.svg" type="">
                     </a>
                     <a href="">
-                        <embed src="images/twitter.svg" type="">
+                        <img src="images/twitter.svg" type="">
                     </a>
                     <a href="">
-                        <embed src="images/pinterest.svg" type="">
+                        <img src="images/pinterest.svg" type="">
                     </a>
                     <a href="">
-                        <embed src="images/instagram.svg" type="">
+                        <img src="images/instagram.svg" type="">
                     </a>
                 </div>
                 <span>Copyright © 2000-2021 | Roots ®</span>
