--- a/index.html
+++ b/index.html
@@ -221,16 +221,16 @@
         <footer>
             <div>
                 <div id="social-media">
-                    <a href="https://www.google.com.br">
+                    <a href="https://www.facebook.com/">
                         <img src="images/facebook.svg" type="">
                     </a>
-                    <a href="">
+                    <a href="https://twitter.com/?lang=pt">
                         <img src="images/twitter.svg" type="">
                     </a>
-                    <a href="">
+                    <a href="https://br.pinterest.com/">
                         <img src="images/pinterest.svg" type="">
                     </a>
-                    <a href="">
+                    <a href="https://www.instagram.com/">
                         <img src="images/instagram.svg" type="">
                     </a>
                 </div>
