--- a/index.html
+++ b/index.html
@@ -70,43 +70,43 @@
             <div>
                 <div id="product-card">
                     <div>
-                        <img src="images/products/salmon_salad.jpg" alt="">
+                        <img id="product-image" src="images/products/salmon_salad.jpg" alt="">
                     </div>
                     <div>
-                        <span>SALADAS</span>
-                        <p>Salada c/ salmão</p>
-                        <span>R$ 23.90</span>
+                        <span id="product-category">SALADAS</span>
+                        <p id="product-name">Salada c/ salmão</p>
+                        <span id="product-price">R$ 23.90</span>
                     </div>
-                    <a href="">
-                        <span>+</span>
+                    <a onclick="addToCart(this)">
+                        <span id="product-symbol">+</span>
                     </a>
                 </div>
 
                 <div id="product-card">
                     <div>
-                        <img src="images/products/mixed_salad.png" alt="">
+                        <img id="product-image" src="images/products/mixed_salad.png" alt="">
                     </div>
                     <div>
-                        <span>SALADAS</span>
-                        <p>Salada mista</p>
-                        <span>R$ 20.90</span>
+                        <span id="product-category">SALADAS</span>
+                        <p id="product-name">Salada mista</p>
+                        <span id="product-price">R$ 20.90</span>
                     </div>
-                    <a href="">
-                        <span>+</span>
+                    <a onclick="addToCart(this)">
+                        <span id="product-symbol">+</span>
                     </a>
                 </div>
 
                 <div id="product-card">
                     <div>
-                        <img src="images/products/cesar_salad.png" alt="">
+                        <img id="product-image" src="images/products/cesar_salad.png" alt="">
                     </div>
                     <div>
-                        <span>SALADAS</span>
-                        <p>Salada Cesar</p>
-                        <span>R$ 15.90</span>
+                        <span id="product-category">SALADAS</span>
+                        <p id="product-name">Salada Cesar</p>
+                        <span id="product-price">R$ 15.90</span>
                     </div>
-                    <a href="">
-                        <span>+</span>
+                    <a onclick="addToCart(this)">
+                        <span id="product-symbol">+</span>
                     </a>
                 </div>
             </div>
