--- a/pages/cart.html
+++ b/pages/cart.html
@@ -62,7 +62,7 @@
           <div id="rectangle-order" class="order-content">
             <div class="order-item">
               <div>
-                <img src="../images/saladaSalmao.jpg" alt="saladaSalmao">
+                <img src="../images/salmon_salad.jpg" alt="salmon_salad">
               </div>
               <div class="order-info">
                 <p><b>Salada c/ salmão</b></p>
@@ -82,7 +82,7 @@
 
             <div class="order-item">
               <div>
-                <img src="../images/saladaSalmao.jpg" alt="saladaSalmao">
+                <img src="../images/salmon_salad.jpg" alt="salmon_salad">
               </div>
               <div class="order-info">
                 <p><b>Salada c/ salmão</b></p>
@@ -102,7 +102,7 @@
 
             <div class="order-item">
               <div>
-                <img src="../images/saladaSalmao.jpg" alt="saladaSalmao">
+                <img src="../images/salmon_salad.jpg" alt="salmon_salad">
               </div>
               <div class="order-info">
                 <p><b>Salada c/ salmão</b></p>
