--- a/pages/checkout.html
+++ b/pages/checkout.html
@@ -61,19 +61,78 @@
         <div class="payment">
           <p id="p-payment">Pagamento</p>
           <div id="rectangle-payment" class="payment-content">
+
+            <!-- Paypal -->
             <div class="payment-item">
-              <div>
+              <div class="payment-logo">
+                <input type="radio" id="payment-select-box"/>
                 <img src="../images/paypal.png" alt="paypal-logo">
               </div>
+
               <div class="payment-info">
                 <p>até 12x</p>
               </div>
   
               <div class="payment-flags">
-                <img src="../images/mastercard.png" alt="mastercard"/>
-                <img src="../images/visa.png" alt="visa"/>
+                <img src="../images/mastercard.png" alt="mastercard" id="mastercard-logo"/>
+                <img src="../images/visa.png" alt="visa" id="visa-logo"/>
               </div>
             </div>
+
+            <!-- Cartão -->
+            <div class="payment-item">
+              <div class="payment-logo">
+                <input type="radio" id="payment-select-box"/>
+                <img src="../images/card.png" alt="paypal-logo">
+                <p id="p-card">Cartão</p>
+              </div>
+
+              <div class="payment-info">
+                <p>até 12x</p>
+              </div>
+  
+              <div class="payment-flags">
+                <img src="../images/mastercard.png" alt="mastercard" id="mastercard-logo"/>
+                <img src="../images/visa.png" alt="visa" id="visa-logo"/>
+              </div>
+            </div>
+
+
+            <!-- Boleto -->
+            <div class="payment-item">
+              <div class="payment-logo">
+                <input type="radio" id="payment-select-box"/>
+                <img src="../images/paypal.png" alt="paypal-logo">
+              </div>
+
+              <div class="payment-info">
+                <p>à vista</p>
+              </div>
+  
+              <div class="payment-flags">
+                <img src="../images/mastercard.png" alt="mastercard" id="mastercard-logo"/>
+                <img src="../images/visa.png" alt="visa" id="visa-logo"/>
+              </div>
+            </div>
+
+
+            <!-- Pix -->
+            <div class="payment-item">
+              <div class="payment-logo">
+                <input type="radio" id="payment-select-box"/>
+                <img src="../images/paypal.png" alt="paypal-logo">
+              </div>
+
+              <div class="payment-info">
+                <p>à vista</p>
+              </div>
+  
+              <div class="payment-flags">
+                <img src="../images/mastercard.png" alt="mastercard" id="mastercard-logo"/>
+                <img src="../images/visa.png" alt="visa" id="visa-logo"/>
+              </div>
+            </div>
+
           </div>
         </div>  
         
