checkout and updates

--- a/pages/cart.html
+++ b/pages/cart.html
@@ -13,7 +13,7 @@
     <div class="sidebar">
       <ul>
         <li>
-          <a href="#">
+          <a href="../index.html">
             <img id="homeIcon" src="../images/home.svg" alt="home">
           </a>
         </li>
@@ -60,6 +60,7 @@
         <div class="order">
           <p id="p-pedido">Pedido</p>
           <div id="rectangle-order" class="order-content">
+            
             <div class="order-item">
               <div>
                 <img src="../images/salmon_salad.jpg" alt="salmon_salad">
@@ -78,47 +79,8 @@
                 <p>Quantidade:</p>
                 <input type="number"/>
               </div>
-            </div>
 
-            <div class="order-item">
-              <div>
-                <img src="../images/salmon_salad.jpg" alt="salmon_salad">
-              </div>
-              <div class="order-info">
-                <p><b>Salada c/ salmão</b></p>
-                <p>Categoria: <b>Saladas</b></p>
-                <p>Peso: <b>250g</b></p>
-              </div>
-  
-              <div class="order-price">
-                <span>R$ 23.90</span>
-              </div>
-  
-              <div class="order-amount">
-                <p>Quantidade:</p>
-                <input type="number"/>
-              </div>
-            </div>
-
-            <div class="order-item">
-              <div>
-                <img src="../images/salmon_salad.jpg" alt="salmon_salad">
-              </div>
-              <div class="order-info">
-                <p><b>Salada c/ salmão</b></p>
-                <p>Categoria: <b>Saladas</b></p>
-                <p>Peso: <b>250g</b></p>
-              </div>
-  
-              <div class="order-price">
-                <span>R$ 23.90</span>
-              </div>
-  
-              <div class="order-amount">
-                <p>Quantidade:</p>
-                <input type="number"/>
-              </div>
-            </div>
+            </div>    
           </div>
         </div>  
         
@@ -157,7 +119,7 @@
             </div>
 
             <div class="btn-checkout">
-              <button>CHECKOUT</button>
+              <button><a href="/pages/checkout.html" id="checkout-btn" style="text-decoration: none; color: white">CHECKOUT</a></button>
             </div>
           </div>
           <p id="copyrights">Copyright © 2000-2021 | Roots ®</p>
