--- a/pages/checkout.html
+++ b/pages/checkout.html
@@ -13,7 +13,7 @@
     <div class="sidebar">
       <ul>
         <li>
-          <a href="#">
+          <a href="../index.html">
             <img id="homeIcon" src="../images/home.svg" alt="home">
           </a>
         </li>
@@ -25,6 +25,11 @@
         <li>
           <a href="#">
             <img id="storeIcon" src="../images/store.png" alt="store">
+          </a>
+        </li>
+        <li>
+          <a href="/pages/cart.html">
+            <img id="cartIcon" src="../images/shopping_cart.png" alt="cart">
           </a>
         </li>
         <li>
@@ -65,12 +70,12 @@
             <!-- Paypal -->
             <div class="payment-item">
               <div class="payment-logo">
-                <input type="radio" id="payment-select-box"/>
+                <input type="radio" id="payment-select-box" name="payment-selected" onclick="hideCardRegistration()"/>
                 <img src="../images/paypal.png" alt="paypal-logo">
               </div>
 
               <div class="payment-info">
-                <p>até 12x</p>
+                <p id="p-paypal">até 12x</p>
               </div>
   
               <div class="payment-flags">
@@ -80,10 +85,10 @@
             </div>
 
             <!-- Cartão -->
-            <div class="payment-item">
+            <div class="payment-item card-register">
               <div class="payment-logo">
-                <input type="radio" id="payment-select-box"/>
-                <img src="../images/card.png" alt="paypal-logo">
+                <input type="radio" id="payment-select-box" name="payment-selected" onclick="showCardRegistration()"/>
+                <img src="../images/card.png" alt="card">
                 <p id="p-card">Cartão</p>
               </div>
 
@@ -97,12 +102,29 @@
               </div>
             </div>
 
+            <div class="card-registration" style="display: none">
+              <form>
+                <p>Número do cartão</p>
+                <input type="text" placeholder="0000 0000 0000 0000" id="card-info"/>
+  
+                <p id="p-card-name">Nome no cartão</p>
+                <input  type="text" placeholder="NOME" id="card-info"/>
+                
+                <p>Data de validade</p>
+                <input type="text" placeholder="dd/mm/yyyy" id="card-info"/>
+  
+                <p id="p-card-cvv">CCV</p>
+                <input type="text" placeholder="123" id="card-info"/>
+              </form>
+            </div>
+
 
             <!-- Boleto -->
             <div class="payment-item">
               <div class="payment-logo">
-                <input type="radio" id="payment-select-box"/>
-                <img src="../images/paypal.png" alt="paypal-logo">
+                <input type="radio" id="payment-select-box" name="payment-selected" onclick="hideCardRegistration()"/>
+                <img src="../images/boleto.png" alt="boleto">
+                <p id="p-card">Boleto</p>
               </div>
 
               <div class="payment-info">
@@ -110,17 +132,16 @@
               </div>
   
               <div class="payment-flags">
-                <img src="../images/mastercard.png" alt="mastercard" id="mastercard-logo"/>
-                <img src="../images/visa.png" alt="visa" id="visa-logo"/>
+                <img src="../images/mastercard.png" alt="mastercard" id="mastercard-logo" style="opacity:0"/>
+                <img src="../images/visa.png" alt="visa" id="visa-logo" style="opacity:0"/>
               </div>
             </div>
-
 
             <!-- Pix -->
             <div class="payment-item">
               <div class="payment-logo">
-                <input type="radio" id="payment-select-box"/>
-                <img src="../images/paypal.png" alt="paypal-logo">
+                <input type="radio" id="payment-select-box" name="payment-selected" onclick="hideCardRegistration()"/>
+                <img src="../images/pix.png" alt="pix">
               </div>
 
               <div class="payment-info">
@@ -128,8 +149,8 @@
               </div>
   
               <div class="payment-flags">
-                <img src="../images/mastercard.png" alt="mastercard" id="mastercard-logo"/>
-                <img src="../images/visa.png" alt="visa" id="visa-logo"/>
+                <img src="../images/mastercard.png" alt="mastercard" id="mastercard-logo" style="opacity:0"/>
+                <img src="../images/visa.png" alt="visa" id="visa-logo" style="opacity:0"/>
               </div>
             </div>
 
@@ -141,7 +162,7 @@
           <div id="rectangle-summary" class="summary-content">
 
             <div class="status-acount">
-              <span>CONTA NAO REGISTRADA</span>
+              <span>USER0001</span>
             </div>
             <div class="order-code">
               <p>Código do pedido</p>
@@ -171,8 +192,9 @@
             </div>
 
             <div class="btn-checkout">
-              <button>CHECKOUT</button>
+              <button onclick="checkoutValidate()">CHECKOUT</button>
             </div>
+
           </div>
           <p id="copyrights">Copyright © 2000-2021 | Roots ®</p>
         </div>
@@ -180,4 +202,5 @@
     </div>
   </div>
 </body>
+<script type="text/javascript" src="../scripts/checkoutFunctions.js"></script>
 </html>
