--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 
 <head>
     <meta charset="UTF-8">
@@ -41,7 +41,7 @@
                         </a>
                         <div id="cart-count">
                             <embed src="images/circle_cart.svg" type="">
-                            <span>1</span>
+                            <span>0</span>
                         </div>
                     </div>
                     <div id="login">
