Update checkout javascript

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <div id="search-cart">
                         <div id="search">
                             <input type="search" name="search" id="" placeholder="Buscar um produto">
-                            <img src="images/search.svg" type="">
+                            <img src="images/search.svg" type="" onclick="window.location='/pages/products.html'">
                         </div>
                         <a id="cart" href="pages/cart.html">
                             <img src="images/shopping_cart.svg" type="">
