Add sum of products

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                     </div>
                     <div>
                         <span id="product-category">SALADAS</span>
-                        <p id="product-name">Salada Cesar</p>
+                        <p id="product-name">Salada César</p>
                         <span id="product-price">R$ 15.90</span>
                     </div>
                     <a onclick="addToCart(this)">
