--- a/pages/register.html
+++ b/pages/register.html
@@ -18,7 +18,7 @@
             <div>
                 <embed src="../images/login_decoration.svg" type="">
             </div>
-            <span class="caption">Bem-vindo de volta</span>
+            <span class="caption">Bem-vindo a Roots</span>
             <span class="copyright">Copyright © 2000-2021 | Roots ®</span>
         </div>
         <div class="fields">
