--- a/pages/cart.html
+++ b/pages/cart.html
@@ -120,8 +120,7 @@
           </div>
 
           <div class="btn-checkout">
-            <button><a href="../pages/checkout.html" id="checkout-btn"
-                style="text-decoration: none; color: white">CHECKOUT</a></button>
+            <button><a id="checkout-btn" style="text-decoration: none; color: white">CHECKOUT</a></button>
           </div>
         </div>
         <p id="copyrights">Copyright © 2000-2021 | Roots ®</p>
