--- a/pages/register.html
+++ b/pages/register.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/register.css">
-    <title>Document</title>
+    <title>Register | Roots</title>
 </head>
 
 <body>
